--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -38,15 +38,60 @@
         </div>
     </nav>
     <div class="container-fluid">
-        <select id="brandSelect" class="form-select" aria-label="Select brand">
-            <option value>Choose Brand</option>
-            <option value="Audi">Audi</option>  
-            <option value="BMW">BMW</option>
-            <option value="Mercedes">Mercedes</option>
-        </select>
-        <select id="modelSelect" class="form-select" aria-label="Select model" disabled>
-            <option value="" selected>Choose Model</option>
-        </select>
+      
+      <div class="row d-flex justify-content-center">
+        <div class="col-4">
+          <select id="brandSelect" class="form-select" aria-label="Select brand">
+              <option value>Choose Brand</option>
+              <option value="Audi">Audi</option>  
+              <option value="BMW">BMW</option>
+              <option value="Mercedes">Mercedes</option>
+          </select>
+         </div>
+         <div class="col-4">
+          <select id="modelSelect" class="form-select" aria-label="Select model" disabled>
+              <option value="" selected>Choose Model</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="row d-flex justify-content-center">
+        <div class="col-4">
+          <select id="transmissionSelect" class="form-select" aria-label="Select transmission">
+            <option value>Choose Transmission</option>
+            <option value="Manual">Manual</option>  
+            <option value="Automatic">Automatic</option>
+          </select>
+        </div>
+        <div class="col-4">
+          <select id="fuelSelect" class="form-select" aria-label="Select fuel">
+            <option value>Choose Fuel</option>
+            <option value="Diesel">Diesel</option>  
+            <option value="Gasoline">Gasoline</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="row d-flex justify-content-center">
+        <div class="col-4">
+          <h6>Mileage</h6>
+          <div class="form-group">
+            <input type="number" class="form-control" id="mileageLower" placeholder="From" name="mileageLower">
+          </div>
+          <div class="form-group">
+            <input type="number" class="form-control" id="mileageUpper" placeholder="To" name="mileageUpper">
+          </div>
+        </div>
+        <div class="col-4">
+          <h6>Year</h6>
+          <div class="form-group">
+            <input type="number" class="form-control" id="yearLower" placeholder="From" name="yearLower">
+          </div>
+          <div class="form-group">
+            <input type="number" class="form-control" id="yearUpper" placeholder="To" name="yearUpper">
+          </div>
+        </div>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
