--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -112,7 +112,16 @@
      </form> 
     </div>
 
-    
+    <footer>
+      <div class="row d-flex justify-content-center bg-body-tertiary px-3 py-2">
+        <div class="col-sm-6 col-12">
+          <p>CarMarket. All rights reserved.</p>    
+        </div>
+        <div class="col-sm-6 col-12 text-end">
+          <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">Scroll to top</button> 
+        </div>
+
+    </footer>    
      
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
