Finished car view

--- a/frontend/html/listings.html
+++ b/frontend/html/listings.html
@@ -40,7 +40,7 @@
     </nav>
     
     <div class="container"> 
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center gy-3">
             <div class="col-sm-4 col-12">
                 <div class="card">
                     <img src="../assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
@@ -48,6 +48,7 @@
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
                     <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><i class="fa-solid fa-money-bill me-2"></i>60000 KM</li>
                     <li class="list-group-item"><i class="fa-solid fa-gas-pump me-2"></i>Diesel</li>
                     <li class="list-group-item"><i class="fa-solid fa-road me-2"></i>170000 km</li>
                     <li class="list-group-item"><i class="fa-solid fa-calendar me-2"></i>2018</li>
@@ -62,6 +63,7 @@
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
                     <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><i class="fa-solid fa-money-bill me-2"></i>60000 KM</li>
                     <li class="list-group-item"><i class="fa-solid fa-gas-pump me-2"></i>Diesel</li>
                     <li class="list-group-item"><i class="fa-solid fa-road me-2"></i>170000 km</li>
                     <li class="list-group-item"><i class="fa-solid fa-calendar me-2"></i>2018</li>
@@ -76,6 +78,7 @@
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
                     <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><i class="fa-solid fa-money-bill me-2"></i>60000 KM</li>
                     <li class="list-group-item"><i class="fa-solid fa-gas-pump me-2"></i>Diesel</li>
                     <li class="list-group-item"><i class="fa-solid fa-road me-2"></i>170000 km</li>
                     <li class="list-group-item"><i class="fa-solid fa-calendar me-2"></i>2018</li>
@@ -90,6 +93,7 @@
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
                     <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><i class="fa-solid fa-money-bill me-2"></i>60000 KM</li>
                     <li class="list-group-item"><i class="fa-solid fa-gas-pump me-2"></i>Diesel</li>
                     <li class="list-group-item"><i class="fa-solid fa-road me-2"></i>170000 km</li>
                     <li class="list-group-item"><i class="fa-solid fa-calendar me-2"></i>2018</li>
@@ -104,6 +108,7 @@
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
                     <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><i class="fa-solid fa-money-bill me-2"></i>60000 KM</li>
                     <li class="list-group-item"><i class="fa-solid fa-gas-pump me-2"></i>Diesel</li>
                     <li class="list-group-item"><i class="fa-solid fa-road me-2"></i>170000 km</li>
                     <li class="list-group-item"><i class="fa-solid fa-calendar me-2"></i>2018</li>
@@ -118,6 +123,7 @@
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
                     <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><i class="fa-solid fa-money-bill me-2"></i>60000 KM</li>
                     <li class="list-group-item"><i class="fa-solid fa-gas-pump me-2"></i>Diesel</li>
                     <li class="list-group-item"><i class="fa-solid fa-road me-2"></i>170000 km</li>
                     <li class="list-group-item"><i class="fa-solid fa-calendar me-2"></i>2018</li>
@@ -132,6 +138,7 @@
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
                     <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><i class="fa-solid fa-money-bill me-2"></i>60000 KM</li>
                     <li class="list-group-item"><i class="fa-solid fa-gas-pump me-2"></i>Diesel</li>
                     <li class="list-group-item"><i class="fa-solid fa-road me-2"></i>170000 km</li>
                     <li class="list-group-item"><i class="fa-solid fa-calendar me-2"></i>2018</li>
