--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/e8b1622d27.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/spapp.css"/>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./frontend/css/spapp.css"/>
+    <link rel="stylesheet" href="./frontend/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -62,13 +62,13 @@
         </div>
     </footer>    
      
-    <script src="js/script.js"></script>
+    <script src=".frontend/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-    <script src="js/jquery.spapp.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="./frontend/js/jquery.spapp.js"></script>
+    <script src="./frontend/js/custom.js"></script>
     
 </body>
 </html>
