Added messages, save listings and carousel

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <section id="publishCar"></section>
         <section id="login"></section>
         <section id="register"></section>
+        <section id="savedListings"></section>
+        <section id="messages"></section>
         <section id="home"></section>
         
       </main>
