--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button formaction="#listings" class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
         </div>
@@ -64,7 +64,7 @@
         </div>
     </footer>    
      
-    <script src=".frontend/js/script.js"></script>
+    <script src="./frontend/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
